--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+  "formidable": "^2.0.1",
+    "pdfkit": "^0.13.0",
     "@headlessui/react": "^2.2.9",
+    "@prisma/client": "^5.0.0",
     "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
     "nookies": "^2.5.2",
@@ -22,11 +29,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+  "@types/formidable": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "prisma": "^5.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
