--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,11 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/app/*": ["app/*"],
       "@/*": ["./src/*"],
       "#/*": ["./*"],
       "#lib/*": ["./lib/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.js","**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
