--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "../*": ["../*"],
+      "src/*": ["./src/*"],
+      "lib/*": ["./lib/*"],
+      "../../*": ["../../*"],
+      "../../../*": ["../../../*"],
+      "admin/*": ["../admin/src/*"],
+      "../../app/admin/dashboard/page.js": ["../../app/admin/dashboard/page.js"],
       "@/*": ["./src/*"],
       "#/*": ["./*"],
       "#lib/*": ["./lib/*"]
