--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.0",
     "@headlessui/react": "^2.2.9",
     "@prisma/client": "^6.17.0",
     "axios": "^1.11.0",
-    "bcryptjs": "^2.4.3",
     "formidable": "^2.0.1",
-    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
+    "next-auth": "^5.0.0-beta.29",
     "nookies": "^2.5.2",
     "pdfkit": "^0.13.0",
     "react": "18.2.0",
@@ -30,9 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^2.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
