--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@headlessui/react": "^2.2.9",
     "@prisma/client": "^6.17.0",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "formidable": "^2.0.1",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
@@ -30,7 +32,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^2.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
