--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@auth/prisma-adapter": "^2.11.0",
     "@headlessui/react": "^2.2.9",
     "@prisma/client": "^6.17.0",
+    "@react-pdf/renderer": "^4.3.1",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "formidable": "^2.0.1",
+    "iconv-lite": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
