--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
