--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.9",
     "@prisma/client": "^6.17.0",
     "@react-pdf/renderer": "^4.3.1",
+    "@uploadthing/react": "^7.3.3",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "formidable": "^2.0.1",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "uploadthing": "^7.7.4",
     "use-debounce": "^10.0.1"
   },
   "devDependencies": {
