--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "iconv-lite": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "next": "15.5.2",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.29",
     "nookies": "^2.5.2",
     "pdfkit": "^0.13.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "uploadthing": "^7.7.4",
